# kernelcache-patcher

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md
include/kernelcache-patcher/: Common.hpp  MachO.hpp  kernelcache-patcher.hpp
lib/: CMakeLists.txt
lib/kernelcache-patcher/: CMakeLists.txt  CommonInternal.hpp  MachO.cpp
tools/: CMakeLists.txt
tools/no-appleserialshim/: CMakeLists.txt  no-appleserialshim.cpp
